fix overflow y

--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@
 
 body {
   background-image: url("./images/mountain_1.jpg");
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-width: 100%;
 }
 
 .banner {
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
 
   box-shadow: 0px 100px 70px -32px rgba(32, 32, 32, 0.6) inset;
   -webkit-box-shadow: 0px 100px 70px -32px rgba(32, 32, 32, 0.6) inset;
